<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ur6467.databaseapp.MainActivity">
<!--  <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar"
     />-->
    <Button
        android:id="@+id/btnInsertMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/btnInsertMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="100dp"/>

    <Button
        android:id="@+id/btnViewAllMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnSearchMain"
        android:layout_below="@+id/btnSearchMain"
        android:layout_marginTop="41dp"
        android:text="@string/btnViewAllMain" />

    <Button
        android:id="@+id/btnSearchMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSearchMain"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/btnInsertMain"
        android:layout_alignStart="@+id/btnInsertMain" />


</RelativeLayout>